# matforge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  IP_RADAR.md  PRODUCT.md  README.md  docker-compose.yml  firebase.json  pyproject.toml
.claude/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  FEATURES.md  MATERIALS_DATABASE.md  MEMORY.md  settings.local.json
.claude/memory/: project.md
.github/workflows/: ci.yml  deploy.yml  migrate.yml
backend/: .dockerignore  Dockerfile  README.md  celery_worker.py  pyproject.toml  seed.py  start_worker.py  worker_health.py
backend/app/: main.py
backend/app/api/: middleware.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  builder.py  campaigns.py  credits.py  data_pipeline.py  datasets.py  deep_scan.py  electronic_structure.py  health.py  investor_access.py  ip_radar.py  jobs.py  materials.py  nl_search.py  places.py  stripe_payments.py  templates.py  users.py  websockets.py
backend/app/core/: config.py  firebase.py  redis_connector.py  security.py
backend/app/db/: base.py  models.py
backend/app/services/: campaign_service.py  data_quality.py  ingest_service.py  job_service.py  lattice_utils.py  material_seeder.py  material_service.py  startup_ingest.py  user_service.py
backend/app/tasks/: base.py  celery_app.py  deep_scan.py  ingest_materials.py  run_campaign.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_material_properties.py  003_add_stripe_event_id.py  004_add_cached_places.py
backend/tests/: conftest.py  test_campaigns.py  test_health.py  test_lattice_utils.py  test_middleware.py  test_templates.py  test_users.py
frontend/: .dockerignore  .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/api/: index.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(public)/about/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/explore/: layout.tsx  page.tsx
frontend/src/components/builder/: BuilderForm.tsx
frontend/src/components/core/: ExtensionErrorFilter.tsx  Providers.tsx  ThemeProvider.tsx  VersionGuard.tsx
frontend/src/components/crystal-builder/: CrystalBuilder.tsx
frontend/src/components/dashboard/: ParetoChart.tsx  RoundProgress.tsx
frontend/src/components/docs/: CodeBlock.tsx  DocBreadcrumb.tsx  DocPrevNext.tsx  DocSidebar.tsx  MarkdownRenderer.tsx  TableOfContents.tsx
frontend/src/components/ip-radar/: CreditBar.tsx  DeepScan.tsx  IPRadar.tsx
frontend/src/components/landing/: Footer.tsx  Header.tsx
frontend/src/components/material-builder/: MaterialBuilder.tsx
frontend/src/components/materials/: BandStructureChart.tsx  CompositionBadge.tsx  CopilotChat.tsx  CopyCitation.tsx  DosChart.tsx  ElectronicStructureSection.tsx  ElementBadge.tsx  LatticeToggle.tsx  MaterialCard.tsx  MaterialComparator.tsx  MaterialSearch.tsx  MaterialStructureScene.tsx  MaterialStructureViewer.tsx  PeriodicTableFilter.tsx  PhaseDiagramChart.tsx  PropertyTable.tsx
frontend/src/components/personas/: PersonaPage.tsx
frontend/src/components/seo/: BreadcrumbJsonLd.tsx  JsonLd.tsx
frontend/src/components/ui/: BuyCreditsModal.tsx  CreditsBillingTab.tsx  CreditsIndicator.tsx  LowCreditsBanner.tsx  PlacesAutocomplete.tsx  badge.tsx  breadcrumb.tsx  button.tsx  loading.tsx  progress.tsx  theme-toggle.tsx
frontend/src/components/viewers/: CrystalViewer.tsx
frontend/src/content/docs/: index.ts
frontend/src/content/faq/: accounts.ts  api-faq.ts  data-sources.ts  domains.ts  general.ts  getting-started.ts  index.ts  methodology.ts  optimization.ts  pricing.ts  properties.ts  technical.ts
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api-status.tsx  auth-errors.ts  auth.ts  firebase.ts  materials-api.ts  personas.ts  utils.ts  webgl-recovery.ts
frontend/src/types/: campaign.ts  dataset.ts  next-auth.d.ts  template.ts
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/artifact-registry/: main.tf  outputs.tf
infra/terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf
infra/terraform/modules/memorystore/: main.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf
scripts/: deploy.sh  migrate.sh  setup-local.sh
sdk/: README.md  pyproject.toml
sdk/src/matforge_sdk/: __init__.py  client.py  models.py
src/materia/: __init__.py  campaign.py  exceptions.py  material.py  mdl.py  safe_eval.py  types.py
src/materia/active_learning/: __init__.py  acquisition.py  convergence.py  loop.py
src/materia/analysis/: __init__.py  pareto.py
src/materia/cli/: main.py
src/materia/connectors/: __init__.py  aflow.py  base.py  gnome.py  jarvis.py  materials_project.py  opendac.py  optimade.py  oqmd.py  perovskite.py
src/materia/evaluate/: __init__.py  analytic.py  base.py
src/materia/evaluate/dft/: __init__.py  base_dft.py  gpaw_eval.py  qe.py  vasp.py
src/materia/io/: cif_writer.py  export.py  import_data.py  poscar_writer.py  pymatgen_adapter.py
src/materia/optimize/: __init__.py  base.py  cmaes.py
src/materia/plugins/: __init__.py
src/materia/plugins/water/: components.yaml  physics.py
src/materia/surrogate/: __init__.py  base.py  chgnet_surrogate.py  mace_surrogate.py  mlp.py  onnx_surrogate.py
src/materia/viz/: convergence_plot.py  dashboard.py  pareto_plot.py
tests/: conftest.py  test_active_learning.py  test_cli.py  test_connectors_extended.py  test_material.py  test_mdl.py  test_optimize_cmaes.py  test_pareto.py  test_plugin_water.py  test_safe_eval.py  test_surrogate_mlp.py  test_surrogates_gnn.py
tests/fixtures/: water_material.yaml
(+149 files in other folders)
