[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "matcraft-backend"
version = "0.1.0"
description = "MatCraft backend - FastAPI server for materials discovery"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "gunicorn>=21.2",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",
    # Task queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Auth
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.6",
    # Config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    # Core engine
    "materia",
    # Utilities
    "httpx>=0.25",
    # Electronic structure: band structure, DOS, XRD, phase diagrams
    "mp-api>=0.41",
    # Payments
    "stripe>=11.0",
    # AI
    "google-generativeai>=0.8",
    "pymatgen>=2024.2.8",
    # Firebase Auth
    "firebase-admin>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "RUF"]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # FastAPI Depends(...) in defaults is the idiomatic pattern
    "B904",   # raise-without-from - pervasive in existing handlers
    "B905",   # zip-without-strict
    "B007",   # unused-loop-control-variable
    "RUF002", # ambiguous unicode in docstrings (em-dash, en-dash intentional)
    "RUF003", # ambiguous unicode in comments
    "RUF005", # list concat is fine for small static lists
    "RUF046", # int(x) cast is fine for clarity
    "RUF059", # unused-unpacked-variable
    "E712",   # SQLAlchemy ``col == True`` is required for ORM filters
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
