[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "matforge-sdk"
version = "0.1.0"
description = "Python SDK for the MatCraft materials discovery platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "The MatCraft Collective"},
]
keywords = ["matcraft", "materials", "sdk", "api"]

dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matforge_sdk"]
